--- a/assets/app/views/index.html
+++ b/assets/app/views/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="{% static "styles/paper.css" %}" media="screen">
+    <link rel="stylesheet" href="{% static "styles/site/style.css" %}" media="screen">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="{% static "scripts/shiv.js" %}"></script>
