--- a/assets/app/views/map.html
+++ b/assets/app/views/map.html
@@ -1,110 +1,73 @@
+<div class="row" style="min-height: 100vh; width: 100vw">
+  <ui-gmap-google-map center='vm.map.center'
+                      zoom='vm.map.zoom'
+                      pan='vm.map.pan'
+                      options='vm.map.options'
+                      events='vm.map.events'>
+  </ui-gmap-google-map>
+</div>
 
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="page-header">
-              <h1 id="containers"><a href="/">{$'Bernard Ojengwa'$}</a></h1>
-            </div>
-            <div class="bs-component">
-              <div class="jumbotron">
-                <h1>Hello,</h1>
-                <p>I am <a href="https://en.wikipedia.org/wiki/Nigeria">#Nigeria</a>. Member <a href="https://www.python.org/psf/">@ThePSF</a>. Co-Founder <a href="http://thecodesses.com/">@theCodesses</a>. Nerd, loves music. <a href="http://brucespringsteen.net/">@springsteen</a> #superfan. The web is my alma mater.</p>
-                <br>
-                <p><a class="btn btn-default btn-lg" href="https://medium.com/@ojengwa">Read My Blog</a> or <a class="btn btn-primary btn-lg" href="https://github.com/ojengwa?tab=repositories">Checkout my Repos</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
+<hr>
 
-      <div class="bs-docs-section">
-        <div class="row">
-          <div class="col-lg-6" id="read">
-            <h2 id="type-blockquotes">Currently Reading...</h2>
-            <br>
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="bs-component">
-                  <blockquote>
-                    <p>These critics don't understand how a company can reject growth, meetings, budgets, boards of directors, advertising, salespeople, and "the real world," yet thrive. That's their problem, not ours. They say you need to sell to the Fortune 500. Screw that. We sell to the Fortune 5,000,000...</p>
-                    <small>Jason Fried in <cite title="Rework!"><a href="https://37signals.com/rework">Rework!</a></cite></small>
-                  </blockquote>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6" id="hack">
-            <h2 id="type-blockquotes">Currently hacking on...</h2>
-            <br>
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="bs-component">
-                  <blockquote>
-                    <p>An `sdk` generator for creating project SDKs for various platforms for use with the Sails command-line interface.</p>
-                    <small>Follow Project at <cite title="Sails-SDK"><a href="https://github.com/ojengwa/sails-sdk">Sails-SDK</a></cite></small>
-                  </blockquote>
-                </div>
-              </div>
-            </div>
+<div class="container">
+  <div class="bs-docs-section" id="projects">
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 id="type-blockquotes">Featured Projects...</h2>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            The 'official' <a class="" href="https://pythonhosted.org/paystack/">Paystack SDK for Python</a>. This package is compatible with Python 2.6+, Python 3.1+ and PyPy.
           </div>
         </div>
       </div>
-
-      <div class="bs-docs-section" id="projects">
-
-        <div class="row">
-          <div class="col-lg-12">
-            <h2 id="type-blockquotes">Featured Projects...</h2>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                The 'official' <a class="" href="https://pythonhosted.org/paystack/">Paystack SDK for Python</a>. This package is compatible with Python 2.6+, Python 3.1+ and PyPy.
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                <a class="" href="https://hub.docker.com/r/bern/inits-ci/">inits-ci</a> is a Docker container for custom PHP Jenkins server on Google Compute Engine. Tweaked to work with CakePHP out of the box..
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                <a class="" href="https://github.com/ojengwa/laptop.py">laptop.py</a> is a shell script which turns your OS X laptop into an awesome fullstack web development machine using Python. Inspired by ThoughtBot's laptop for Ruby on Rails.
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                <a class="" href="https://www.npmjs.com/package/fixperm">fixperm</a> is a small command-line utility for fixing app permissions. fixperm attempts to guess who the current logging user is if the optional `-u` or `--user` flag is not set.
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                <a class="" href="https://pythonhosted.org/accounting">accounting</a> is a Python package providing simple and advanced number, money and currency formatting.
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                <a class="" href="https://www.npmjs.com/package/generator-mern">generator-mern</a> is a Yo generator for scaffolding isomorphic apps using Mongo, Express, React and NodeJS.
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="bs-component">
-              <div class="well well-lg">
-                <a class="" href="https://www.npmjs.com/package/bankroll">bankroll</a> is an angular module providing directives and filters for number, money and currency parsing/formatting and conversion.
-              </div>
-            </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            <a class="" href="https://hub.docker.com/r/bern/inits-ci/">inits-ci</a> is a Docker container for custom PHP Jenkins server on Google Compute Engine. Tweaked to work with CakePHP out of the box..
           </div>
         </div>
       </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            <a class="" href="https://github.com/ojengwa/laptop.py">laptop.py</a> is a shell script which turns your OS X laptop into an awesome fullstack web development machine using Python. Inspired by ThoughtBot's laptop for Ruby on Rails.
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            <a class="" href="https://www.npmjs.com/package/fixperm">fixperm</a> is a small command-line utility for fixing app permissions. fixperm attempts to guess who the current logging user is if the optional `-u` or `--user` flag is not set.
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            <a class="" href="https://pythonhosted.org/accounting">accounting</a> is a Python package providing simple and advanced number, money and currency formatting.
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            <a class="" href="https://www.npmjs.com/package/generator-mern">generator-mern</a> is a Yo generator for scaffolding isomorphic apps using Mongo, Express, React and NodeJS.
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="well well-lg">
+            <a class="" href="https://www.npmjs.com/package/bankroll">bankroll</a> is an angular module providing directives and filters for number, money and currency parsing/formatting and conversion.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
