--- a/assets/app/views/index.html
+++ b/assets/app/views/index.html
@@ -19,6 +19,7 @@
 
     <ng-view></ng-view>
 
+    <script src="//apis.google.com/js/client.js?onload=handleClientLoad"></script>
     <script src="//maps.googleapis.com/maps/api/js?libraries=weather,visualization,geometry&language=en"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js"></script>
